WIP: Fixed selection buttons alignment

--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,7 @@
 
 .selection-icon {
   fill: #EEFBFB;
-  height: 75%;
-  display: flex;
+  width: 75%;
 }
 
 #reset-button{
