--- a/src/Selection.css
+++ b/src/Selection.css
@@ -3,11 +3,10 @@
     border-radius: 20px;
     background-color: #007CC7;
     color:#EEFBFB;
-}
-
-.selection-icon{
-    height: 150px;
-    fill:#EEFBFB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .selection-text{
@@ -35,4 +34,10 @@
 .back-button>img{
     height:30px;
     fill: #EEFBFB;
+}
+
+.selection-grid{
+    display: grid;
+    grid-template-columns: repeat(3,150px);
+    grid-auto-rows:  150px;
 }
